syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

package core.grpc.api;

message User {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string username = 4;
  string email = 5;
  string password = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
  google.protobuf.Timestamp deleted_at = 9;
}

message CreateUserRequest {
  string first_name = 1;
  string last_name = 2;
  string username = 3;
  string email = 4;
  string password = 5;
}

message GetUserById {
  string id = 1;
}

message CreateUserReply {
  bool was_created = 1;
}

service UsersService {
  rpc Create(CreateUserRequest) returns (CreateUserReply);
  rpc GetAll(google.protobuf.Empty) returns (stream User);
  rpc GetById(GetUserById) returns (User);
}